--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Il prezzo del suo biglietto è di <span id="price"></span></h1>
+    <h1>Il prezzo del suo biglietto è di <span id="price"></span>€</h1>
 
     <script src="js/main.js"></script>
 </body>
